--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>React App Boilerplate</title>
 </head>
 <body>
+  <div id="app"></div>
 
-  <script src="public/app.js"></script>
+  <script src="public/scripts/app.js"></script>
 </body>
 </html>
